# advent-of-code

./: LICENSE  README.md
2020/: Cargo.toml  rust-toolchain
2020/days/day1/: Cargo.toml
2020/days/day1/src/: main.rs
2020/days/day2/: Cargo.toml
2020/days/day2/src/: main.rs
2020/days/day3/: Cargo.toml
2020/days/day3/src/: main.rs
2020/days/day4/: Cargo.toml
2020/days/day4/src/: main.rs
2020/days/day5/: Cargo.toml
2020/days/day5/src/: main.rs
2020/days/day6/: Cargo.toml
2020/days/day6/src/: main.rs
2021/: Cargo.toml  rust-toolchain
2021/days/day1/: Cargo.toml
2021/days/day1/src/: main.rs
2021/days/day2/: Cargo.toml
2021/days/day2/src/: main.rs
2021/days/day3/: Cargo.toml
2021/days/day3/src/: main.rs
2021/days/day4/: Cargo.toml
2021/days/day4/src/: main.rs
