[package]
name = "day3"
version = "0.1.0"
authors = ["Quentin Perez <qperez42@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
serde = {version = "1.0", features = ["derive"] }
serde_scan = "0.4"